
ADD_CUSTOM_TARGET(depend)

SET(SHARED_EXT "so")
IF(APPLE)
    SET(SHARED_EXT "dylib")
ENDIF()

### opengl
FIND_PACKAGE(OpenGL REQUIRED)

### glm
MESSAGE("Adding dependency: glm")

SET(GLM_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/depend/glm")

ADD_CUSTOM_TARGET(glm)
ADD_DEPENDENCIES(depend glm)

### nlohmann_json
MESSAGE("Adding dependency: json")

SET(JSON_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/depend/json/include")

ADD_CUSTOM_TARGET(json)
ADD_DEPENDENCIES(depend json)

### zlib
MESSAGE("Adding dependency: zlib")

SET(ZLIB_OPTIONS
)

SET(ZLIB_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/depend/zlib"
    "${CMAKE_BINARY_DIR}/depend/zlib"

)

FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/depend/zlib)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
        ${CMAKE_SOURCE_DIR}/depend/zlib ${ZLIB_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/zlib
)

IF (MSVC)
    SET(ZLIB_LIBRARIES_DEBUG "${CMAKE_BINARY_DIR}/depend/zlib/Debug/zlibd.lib")
    SET(ZLIB_LIBRARIES_DEBUG "${ZLIB_LIBRARIES_DEBUG}")
    SET(ZLIB_LIBRARIES_RELEASE "${CMAKE_BINARY_DIR}/depend/zlib/Release/zlib.lib")
    SET(ZLIB_LIBRARIES_RELEASE "${ZLIB_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ZLIB_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target zlib
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/zlib
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${ZLIB_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target zlib
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/zlib
    )
    ADD_CUSTOM_TARGET(zlib DEPENDS ${ZLIB_LIBRARIES_DEBUG} ${ZLIB_LIBRARIES_RELEASE})
ELSE()
    SET(ZLIB_LIBRARIES "${CMAKE_BINARY_DIR}/depend/zlib/libz.${SHARED_EXT}")
    SET(ZLIB_LIBRARIES "${ZLIB_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ZLIB_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target zlib
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/zlib
    )
    ADD_CUSTOM_TARGET(zlib DEPENDS ${ZLIB_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend zlib)

### SDL2
MESSAGE("Adding dependency: SDL2")

SET(SDL2_OPTIONS
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
)

IF(NOT MSVC)
    SET(SDL2_OPTIONS ${SDL2_OPTIONS} -DBUILD_SHARED_LIBS=ON)
ENDIF()

SET(SDL2_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/depend/SDL2/include"
    "${CMAKE_BINARY_DIR}/depend/SDL2/include"

)

FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/depend/SDL2)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
        ${CMAKE_SOURCE_DIR}/depend/SDL2 ${SDL2_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/SDL2
)

IF (MSVC)
    SET(SDL2_LIBRARIES_DEBUG "${CMAKE_BINARY_DIR}/depend/SDL2/Debug/libSDL2.lib")
    SET(SDL2_LIBRARIES_DEBUG "${SDL2_LIBRARIES_DEBUG}")
    SET(SDL2_LIBRARIES_RELEASE "${CMAKE_BINARY_DIR}/depend/SDL2/Release/libSDL2.lib")
    SET(SDL2_LIBRARIES_RELEASE "${SDL2_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target SDL2-static
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/sdl2
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target SDL2-static
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/sdl2
    )
    ADD_CUSTOM_TARGET(sdl2 DEPENDS ${SDL2_LIBRARIES_DEBUG} ${SDL2_LIBRARIES_RELEASE})
ELSE()
    STRING(TOLOWER "${CMAKE_BUILD_TYPE}" build_type)
    IF (build_type STREQUAL "debug")
        SET(SDL2_LIBRARIES "${CMAKE_BINARY_DIR}/depend/SDL2/libSDL2-2.0d.${SHARED_EXT}")
    ELSE()
        SET(SDL2_LIBRARIES "${CMAKE_BINARY_DIR}/depend/SDL2/libSDL2-2.0.${SHARED_EXT}")
    ENDIF()
    SET(SDL2_LIBRARIES "${SDL2_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target SDL2
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/SDL2
    )
    ADD_CUSTOM_TARGET(sdl2 DEPENDS ${SDL2_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend sdl2)

### OpenAL
MESSAGE("Adding dependency: openal")

SET(OPENAL_OPTIONS
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    -DALSOFT_UTILS=OFF
    -DALSOFT_EXAMPLES=OFF
    -DALSOFT_TESTS=OFF
    -DALSOFT_INSTALL=OFF
)

SET(OPENAL_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/depend/openal/include"
    "${CMAKE_BINARY_DIR}/depend/openal"
)

FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/depend/openal)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
        ${CMAKE_SOURCE_DIR}/depend/openal ${OPENAL_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/openal
)

IF (MSVC)
    SET(OPENAL_LIBRARIES_DEBUG "${CMAKE_BINARY_DIR}/depend/openal/Debug/OpenAL32.lib")
    SET(OPENAL_LIBRARIES_DEBUG "${OPENAL_LIBRARIES_DEBUG}")
    SET(OPENAL_LIBRARIES_RELEASE "${CMAKE_BINARY_DIR}/depend/openal/Release/OpenAL32.lib")
    SET(OPENAL_LIBRARIES_RELEASE "${OPENAL_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target openal
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/openal
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target openal
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/openal
    )
    ADD_CUSTOM_TARGET(openal DEPENDS ${OPENAL_LIBRARIES_DEBUG} ${OPENAL_LIBRARIES_RELEASE})
ELSE()
    SET(OPENAL_LIBRARIES "${CMAKE_BINARY_DIR}/depend/openal/libopenal.${SHARED_EXT}")
    SET(OPENAL_LIBRARIES "${OPENAL_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target OpenAL
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/openal
    )
    ADD_CUSTOM_TARGET(openal DEPENDS ${OPENAL_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend openal)

### FlatBuffers
MESSAGE("Adding dependency: flatbuffers")

SET(FLATBUFFERS_OPTIONS
    -DFLATBUFFERS_BUILD_TESTS=OFF
    -DFLATBUFFERS_BUILD_FLATHASH=OFF
    -DFLATBUFFERS_INSTALL=OFF
)

SET(FLATBUFFERS_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/depend/flatbuffers/include"
)

FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/depend/flatbuffers)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
    	${CMAKE_SOURCE_DIR}/depend/flatbuffers ${FLATBUFFERS_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/flatbuffers
)

IF (MSVC)
    SET(FLATBUFFERS_LIBRARIES_DEBUG "${CMAKE_BINARY_DIR}/depend/flatbuffers/Debug/flatbuffers.lib")
    SET(FLATBUFFERS_LIBRARIES_DEBUG "${FLATBUFFERS_LIBRARIES_DEBUG}")
    SET(FLATBUFFERS_LIBRARIES_RELEASE "${CMAKE_BINARY_DIR}/depend/flatbuffers/Release/flatbuffers.lib")
    SET(FLATBUFFERS_LIBRARIES_RELEASE "${FLATBUFFERS_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/flatbuffers
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/flatbuffers
    )
    ADD_CUSTOM_TARGET(flatbuffers
        DEPENDS ${FLATBUFFERS_LIBRARIES_DEBUG} ${FLATBUFFERS_LIBRARIES_RELEASE})
ELSE()
    SET(FLATBUFFERS_LIBRARIES "${CMAKE_BINARY_DIR}/depend/flatbuffers/libflatbuffers.a")
    SET(FLATBUFFERS_LIBRARIES "${FLATBUFFERS_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/depend/flatbuffers
    )
    ADD_CUSTOM_TARGET(flatbuffers DEPENDS ${FLATBUFFERS_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend flatbuffers)

### AngelScript
MESSAGE("Adding dependency: AngelScript")

SET(ANGELSCRIPT_OPTIONS
)

SET(ANGELSCRIPT_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/ # for add_on
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/angelscript/include/
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
            ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/angelscript/projects/cmake ${ANGELSCRIPT_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
)

IF (MSVC)
    # TODO
ELSE()
    SET(ANGELSCRIPT_LIBRARIES ${CMAKE_CURRENT_BINARY_DIR}/AngelScript/libangelscript.a)
    SET(ANGELSCRIPT_LIBRARIES "${ANGELSCRIPT_LIBRARIES}" PARENT_SCOPE)

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ANGELSCRIPT_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target angelscript
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
    )
    ADD_CUSTOM_TARGET(AngelScript DEPENDS ${ANGELSCRIPT_LIBRARIES})
ENDIF()

ADD_DEPENDENCIES(depend AngelScript)

INCLUDE_DIRECTORIES(${ANGELSCRIPT_INCLUDE_DIRS})

SET_TARGET_PROPERTIES(
    depend glm json zlib sdl2 openal flatbuffers AngelScript
    PROPERTIES FOLDER "depend"
)

###
### Exported Variables
###

SET(_DEPEND_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/datetime/datetime.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/scriptarray/scriptarray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/scriptstdstring/scriptstdstring.cpp
    PARENT_SCOPE
)

SET(_DEPEND_INCLUDE_DIRS
    ${OPENGL_INCLUDE_DIRS}
    ${ZLIB_INCLUDE_DIRS}
    ${FLATBUFFERS_INCLUDE_DIRS}
    ${SDL2_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS}
    ${JSON_INCLUDE_DIRS}
    ${OPENAL_INCLUDE_DIRS}
    ${ANGELSCRIPT_INCLUDE_DIRS}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES
    ${OPENGL_LIBRARIES}
    ${ZLIB_LIBRARIES}
    ${SDL2_LIBRARIES}
    ${FLATBUFFERS_LIBRARIES}
    ${OPENAL_LIBRARIES}
    ${ANGELSCRIPT_LIBRARIES}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES_DEBUG
    ${ZLIB_LIBRARIES_DEBUG}
    ${SDL2_LIBRARIES_DEBUG}
    ${FLATBUFFERS_LIBRARIES_DEBUG}
    ${OPENAL_LIBRARIES_DEBUG}
    ${ANGELSCRIPT_LIBRARIES_DEBUG}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES_RELEASE
    ${LUA_LIBRARIES_RELEASE}
    ${ZLIB_LIBRARIES_RELEASE}
    ${SDL2_LIBRARIES_RELEASE}
    ${FLATBUFFERS_LIBRARIES_RELEASE}
    ${OPENAL_LIBRARIES_RELEASE}
    ${ANGELSCRIPT_LIBRARIES_RELEASE}
    PARENT_SCOPE
)
