
ADD_CUSTOM_TARGET(depend)

SET(SHARED_EXT "so")
IF(APPLE)
    SET(SHARED_EXT "dylib")
ENDIF()

### opengl
FIND_PACKAGE(OpenGL REQUIRED)

### glm
MESSAGE("Adding dependency: glm")

SET(GLM_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glm")

ADD_CUSTOM_TARGET(glm)
ADD_DEPENDENCIES(depend glm)

### nlohmann_json
MESSAGE("Adding dependency: json")

SET(JSON_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/json/include")

ADD_CUSTOM_TARGET(json)
ADD_DEPENDENCIES(depend json)

### SDL2
MESSAGE("Adding dependency: SDL2")

SET(SDL2_OPTIONS
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
)

IF(NOT MSVC)
    SET(SDL2_OPTIONS ${SDL2_OPTIONS} -DBUILD_SHARED_LIBS=ON)
ENDIF()

SET(SDL2_INCLUDE_DIRS
    "${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include"
    "${CMAKE_CURRENT_BINARY_DIR}/SDL2/include"
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/SDL2)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
        ${CMAKE_CURRENT_SOURCE_DIR}/SDL2 ${SDL2_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/SDL2
)

IF (MSVC)
    SET(SDL2_LIBRARIES_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/SDL2/Debug/SDL2-staticd.lib"
                             "${CMAKE_CURRENT_BINARY_DIR}/SDL2/Debug/SDL2maind.lib")
    SET(SDL2_LIBRARIES_DEBUG "${SDL2_LIBRARIES_DEBUG}")
    SET(SDL2_LIBRARIES_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/SDL2/Release/SDL2-static.lib"
                               "${CMAKE_CURRENT_BINARY_DIR}/SDL2/Release/SDL2main.lib")
    SET(SDL2_LIBRARIES_RELEASE "${SDL2_LIBRARIES_RELEASE}")
    SET(SDL2_LIBRARIES "user32;gdi32;winmm;imm32;ole32;oleaut32;version;uuid;advapi32;shell32;dinput8")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target SDL2-static
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target SDL2main
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/sdl2
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target SDL2-static
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target SDL2main
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/sdl2
    )
    ADD_CUSTOM_TARGET(sdl2 DEPENDS ${SDL2_LIBRARIES_DEBUG} ${SDL2_LIBRARIES_RELEASE})
ELSE()
    STRING(TOLOWER "${CMAKE_BUILD_TYPE}" build_type)
    IF (build_type STREQUAL "debug")
        SET(SDL2_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/SDL2/libSDL2-2.0d.${SHARED_EXT}")
    ELSE()
        SET(SDL2_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/SDL2/libSDL2-2.0.${SHARED_EXT}")
    ENDIF()
    SET(SDL2_LIBRARIES "${SDL2_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${SDL2_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target SDL2
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/SDL2
    )
    ADD_CUSTOM_TARGET(sdl2 DEPENDS ${SDL2_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend sdl2)

### OpenAL
MESSAGE("Adding dependency: openal")

SET(OPENAL_OPTIONS
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    -DALSOFT_UTILS=OFF
    -DALSOFT_EXAMPLES=OFF
    -DALSOFT_TESTS=OFF
    -DALSOFT_INSTALL=OFF
)

IF(MSVC)
    SET(OPENAL_OPTIONS
        ${OPENAL_OPTIONS}
        -DLIBTYPE="STATIC"
    )
ENDIF()

SET(OPENAL_INCLUDE_DIRS
    "${CMAKE_CURRENT_SOURCE_DIR}/openal/include"
    "${CMAKE_CURRENT_BINARY_DIR}/openal"
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/openal)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
        ${CMAKE_CURRENT_SOURCE_DIR}/openal ${OPENAL_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/openal
)

IF (MSVC)
    SET(OPENAL_LIBRARIES_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/openal/Debug/OpenAL32.lib")
    SET(OPENAL_LIBRARIES_DEBUG "${OPENAL_LIBRARIES_DEBUG}")
    SET(OPENAL_LIBRARIES_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/openal/Release/OpenAL32.lib")
    SET(OPENAL_LIBRARIES_RELEASE "${OPENAL_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target openal
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/openal
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target openal
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/openal
    )
    ADD_CUSTOM_TARGET(openal DEPENDS ${OPENAL_LIBRARIES_DEBUG} ${OPENAL_LIBRARIES_RELEASE})
ELSE()
    SET(OPENAL_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/openal/libopenal.${SHARED_EXT}")
    SET(OPENAL_LIBRARIES "${OPENAL_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${OPENAL_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target OpenAL
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/openal
    )
    ADD_CUSTOM_TARGET(openal DEPENDS ${OPENAL_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend openal)

### FlatBuffers
MESSAGE("Adding dependency: flatbuffers")

SET(FLATBUFFERS_OPTIONS
    -DFLATBUFFERS_BUILD_TESTS=OFF
    -DFLATBUFFERS_BUILD_FLATHASH=OFF
    -DFLATBUFFERS_INSTALL=OFF
)

SET(FLATBUFFERS_INCLUDE_DIRS
    "${CMAKE_CURRENT_SOURCE_DIR}/flatbuffers/include"
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
    	${CMAKE_CURRENT_SOURCE_DIR}/flatbuffers ${FLATBUFFERS_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers
)

IF (MSVC)
    SET(FLATBUFFERS_LIBRARIES_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/flatbuffers/Debug/flatbuffers.lib")
    SET(FLATBUFFERS_LIBRARIES_DEBUG "${FLATBUFFERS_LIBRARIES_DEBUG}")
    SET(FLATBUFFERS_LIBRARIES_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/flatbuffers/Release/flatbuffers.lib")
    SET(FLATBUFFERS_LIBRARIES_RELEASE "${FLATBUFFERS_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers
    )
    ADD_CUSTOM_TARGET(flatbuffers
        DEPENDS ${FLATBUFFERS_LIBRARIES_DEBUG} ${FLATBUFFERS_LIBRARIES_RELEASE})
ELSE()
    SET(FLATBUFFERS_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/flatbuffers/libflatbuffers.a")
    SET(FLATBUFFERS_LIBRARIES "${FLATBUFFERS_LIBRARIES}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${FLATBUFFERS_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target flatbuffers
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers
    )
    ADD_CUSTOM_TARGET(flatbuffers DEPENDS ${FLATBUFFERS_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend flatbuffers)

### AngelScript
MESSAGE("Adding dependency: AngelScript")

SET(ANGELSCRIPT_OPTIONS
)

SET(ANGELSCRIPT_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/ # for add_on
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/angelscript/include/
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
            ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/angelscript/projects/cmake ${ANGELSCRIPT_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
)

IF (MSVC)
    SET(ANGELSCRIPT_LIBRARIES_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/AngelScript/Debug/angelscriptd.lib")
    SET(ANGELSCRIPT_LIBRARIES_DEBUG "${ANGELSCRIPT_LIBRARIES_DEBUG}")
    SET(ANGELSCRIPT_LIBRARIES_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/AngelScript/Release/angelscript.lib")
    SET(ANGELSCRIPT_LIBRARIES_RELEASE "${ANGELSCRIPT_LIBRARIES_RELEASE}")

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ANGELSCRIPT_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target angelscript
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${ANGELSCRIPT_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target angelscript
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
    )
    ADD_CUSTOM_TARGET(AngelScript
        DEPENDS ${ANGELSCRIPT_LIBRARIES_DEBUG} ${ANGELSCRIPT_LIBRARIES_RELEASE})
ELSE()
    SET(ANGELSCRIPT_LIBRARIES ${CMAKE_CURRENT_BINARY_DIR}/AngelScript/libangelscript.a)
    SET(ANGELSCRIPT_LIBRARIES "${ANGELSCRIPT_LIBRARIES}" PARENT_SCOPE)

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ANGELSCRIPT_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target angelscript
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/AngelScript
    )
    ADD_CUSTOM_TARGET(AngelScript DEPENDS ${ANGELSCRIPT_LIBRARIES})
ENDIF()

ADD_DEPENDENCIES(depend AngelScript)

### assimp
MESSAGE("Adding dependency: assimp")

SET(ASSIMP_OPTIONS
    -DASSIMP_BUILD_ASSIMP_TOOLS=OFF
    -DASSIMP_BUILD_SAMPLES=OFF
    -DASSIMP_BUILD_TESTS=OFF
)

SET(ASSIMP_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/assimp/code/
	${CMAKE_CURRENT_SOURCE_DIR}/assimp/include/
	${CMAKE_CURRENT_BINARY_DIR}/assimp/include/
    PARENT_SCOPE
)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/assimp)
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}"
    ${CMAKE_CURRENT_SOURCE_DIR}/assimp ${ASSIMP_OPTIONS}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/assimp
)

IF (MSVC)
    SET(ASSIMP_OPTIONS
        ${ASSIMP_OPTIONS}
        -DBUILD_SHARED_LIBS=OFF
        -DASSIMP_BUILD_ZLIB=ON
    )

	SET(ASSIMP_LIBRARIES_DEBUG "${CMAKE_CURRENT_BINARY_DIR}/assimp/code/Debug/assimp-${MSVC_PREFIX}-mt.lib"
                               "${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/irrXML/Debug/IrrXML.lib"
                               "${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/zlib/Debug/zlibd.lib")
    SET(ASSIMP_LIBRARIES_DEBUG "${ASSIMP_LIBRARIES_DEBUG}" PARENT_SCOPE)
    SET(ASSIMP_LIBRARIES_RELEASE "${CMAKE_CURRENT_BINARY_DIR}/assimp/code/Release/assimp-${MSVC_PREFIX}-mt.lib"
                                 "${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/irrXML/Release/IrrXML.lib"
                                 "${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/zlib/Release/zlib.lib")
    SET(ASSIMP_LIBRARIES_RELEASE "${ASSIMP_LIBRARIES_RELEASE}" PARENT_SCOPE)

	ADD_CUSTOM_COMMAND(
        OUTPUT ${ASSIMP_LIBRARIES_DEBUG}
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target zlib
        COMMAND ${CMAKE_COMMAND} --build . --config Debug --target assimp
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/assimp
    )
    ADD_CUSTOM_COMMAND(
        OUTPUT ${ASSIMP_LIBRARIES_RELEASE}
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target zlib
        COMMAND ${CMAKE_COMMAND} --build . --config Release --target assimp
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/assimp
    )

	ADD_CUSTOM_TARGET(assimp DEPENDS ${ASSIMP_LIBRARIES_DEBUG} ${ASSIMP_LIBRARIES_RELEASE})
ELSE()
	SET(ASSIMP_LIBRARIES "${CMAKE_CURRENT_BINARY_DIR}/assimp/code/libassimp.so"
                         "${CMAKE_CURRENT_BINARY_DIR}/assimp/contrib/irrXML/libIrrXML.a")
    SET(ASSIMP_LIBRARIES "${ASSIMP_LIBRARIES}" PARENT_SCOPE)

    ADD_CUSTOM_COMMAND(
        OUTPUT ${ASSIMP_LIBRARIES}
        COMMAND ${CMAKE_COMMAND} --build . --target assimp
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/assimp
    )
    ADD_CUSTOM_TARGET(assimp DEPENDS ${ASSIMP_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(depend assimp)

SET_TARGET_PROPERTIES(
    depend glm json sdl2 openal flatbuffers AngelScript assimp
    PROPERTIES FOLDER "depend"
)

###
### Exported Variables
###

SET(_DEPEND_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/datetime/datetime.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/scriptarray/scriptarray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AngelScript/sdk/add_on/scriptstdstring/scriptstdstring.cpp
    PARENT_SCOPE
)

SET(_DEPEND_INCLUDE_DIRS
    ${OPENGL_INCLUDE_DIRS}
    ${FLATBUFFERS_INCLUDE_DIRS}
    ${SDL2_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS}
    ${JSON_INCLUDE_DIRS}
    ${OPENAL_INCLUDE_DIRS}
    ${ANGELSCRIPT_INCLUDE_DIRS}
    ${ASSIMP_INCLUDE_DIRS}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES
    ${OPENGL_LIBRARIES}
    ${SDL2_LIBRARIES}
    ${FLATBUFFERS_LIBRARIES}
    ${OPENAL_LIBRARIES}
    ${ANGELSCRIPT_LIBRARIES}
    ${ASSIMP_LIBRARIES}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES_DEBUG
    ${SDL2_LIBRARIES_DEBUG}
    ${FLATBUFFERS_LIBRARIES_DEBUG}
    ${OPENAL_LIBRARIES_DEBUG}
    ${ANGELSCRIPT_LIBRARIES_DEBUG}
    ${ASSIMP_LIBRARIES_DEBUG}
    PARENT_SCOPE
)

SET(_DEPEND_LIBRARIES_RELEASE
    ${SDL2_LIBRARIES_RELEASE}
    ${FLATBUFFERS_LIBRARIES_RELEASE}
    ${OPENAL_LIBRARIES_RELEASE}
    ${ANGELSCRIPT_LIBRARIES_RELEASE}
    ${ASSIMP_LIBRARIES_RELEASE}
    PARENT_SCOPE
)
